# c-src

./: README.md  getopt.c  my  mysql.cpp
file/: out.txt  read.cpp  readme  test  test.txt  write  write.cpp
getopt/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.scan
getopt-1/: Makefile  getopt
getopt/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
socket/: client  p2pclient  p2pserver  server  test-client  test-client.c  test-client1  test-client1.c  test-server  test-server.c
socket/mul/: mulclient  mulserver.c  mulsocket  readme.md
tinyhttpd/: httpd
